src/test/ui/issues/issue-46983.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/issue-46983.rs:2:5
   |
LL |     &*x
   |     ^^^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
